# portfolio_django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  portfolio_ssl.crt  portfolio_ssl.csr  portfolio_ssl.key  pyproject.toml  requirements.txt
db/: postmaster.pid
db/dbdata/: postmaster.pid
db/global/: 1260  pg_control  pg_internal.init
entrance/: admin.py
entrance/migrations/: 0001_initial.py
good_stock/: admin.py  apps.py  good_stock.ipynb  good_stock.py  good_stock_test.py  models.py  urls.py  views.py
good_stock/migrations/: 0001_initial.py  0002_alter_financialinfo_options_alter_metrics_options.py  0003_alter_financialinfo_capitaladequancyratio_and_more.py  0004_alter_financialinfo_capitaladequancyratio_and_more.py  0005_alter_financialinfo_capitaladequancyratio_and_more.py  0006_alter_metrics_dividendrate_and_more.py  0007_alter_metrics_dividendrate_and_more.py  0008_alter_financialinfo_capitaladequancyratio_and_more.py  0009_alter_financialinfo_capitaladequancyratio_and_more.py  0010_goodstock.py  0011_alter_financialinfo_capitaladequancyratio_and_more.py  0012_alter_financialinfo_capitaladequancyratio_and_more.py
good_stock/output/: company_financial_info.csv  company_metrics.csv  company_metrics_upload.csv
good_stock/stock_name/: test.xlsx
good_stock/templates/: downloads.html  index.html  list.html  no_file.html
mysite/: db.sqlite3  settings.py  urls.py
mysite/entrance/: models.py  views.py
nginx/: Dockerfile  nginx.conf
portfolio/: admin.py  forms.py  models.py
stock_scheduler/: Dockerfile
techblog/: admin.py  models.py
(+142 files in other folders)
